fix: Liberando a rota de inclusão de usuários para que não necessite de autenticação
