# storage/api-docs/api-docs.json
@@ -1236,12 +1236,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             }
         },
         "/api/user/{id}": {
